# router

./: Cargo.toml  rust-toolchain.toml
.circleci/: config.yml
apollo-federation/cli/: Cargo.toml
apollo-federation/cli/src/: main.rs
apollo-federation/src/: lib.rs
apollo-router/: Cargo.toml
apollo-router-scaffold/templates/base/: Dockerfile
apollo-router/src/: error.rs  router_factory.rs
apollo-router/src/query_planner/: bridge_query_planner.rs  caching_query_planner.rs  fetch.rs
apollo-router/src/spec/: query.rs  schema.rs
apollo-router/src/spec/query/: transform.rs  traverse.rs
dockerfiles/diy/dockerfiles/: Dockerfile.repo
docs/source/customizations/: custom-binary.mdx
examples/supergraph-sdl/rust/: Cargo.toml
fuzz/: Cargo.toml  router.yaml
xtask/: rustfmt.toml
