[package]
name = "supergraph_sdl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
apollo-compiler = { git = "https://github.com/sushant3524/apollo-rs.git", branch = "router-compiler-ignore-validation" }
apollo-router = { path = "../../../apollo-router" }
async-trait = "0.1"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
